# resonators

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  pages.yml  release-pypi.yml
benches/: bank.rs
crates/resonators/: Cargo.toml  LICENSE-MIT  README.md
crates/resonators-py/: Cargo.toml  README.md  pyproject.toml
crates/resonators-py/src/: lib.rs
crates/resonators-py/tests/: test_basic.py
crates/resonators-wasm/: Cargo.toml  README.md
crates/resonators-wasm/src/: lib.rs
crates/resonators/benches/: bank.rs
crates/resonators/examples/: batch.rs  streaming.rs
crates/resonators/src/: bank.rs  config.rs  dynamics.rs  frequencies.rs  lib.rs  resonator.rs
crates/resonators/tests/: reference.rs
examples/web-bench/: bench.worker.js  index.html
examples/web-spectrogram/: app.js  index.html  polyfill.js  style.css  worklet.js
fixtures/: chirp_88.npz
scripts/: benchmark.py  example.py  generate_fixtures.py
src/: bank.rs  dynamics.rs  frequencies.rs  lib.rs  resonator.rs
tests/: reference.rs
