[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.1"
authors = ["John Hartquist <john@hartquist.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jhartquist/resonators"
homepage = "https://github.com/jhartquist/resonators"
documentation = "https://docs.rs/resonators"
readme = "README.md"
keywords = ["audio", "dsp", "spectral-analysis", "real-time", "resonate"]
categories = ["multimedia::audio", "science"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
