[package]
name = "resonators-py"
description = "Python bindings for the resonators crate."
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "resonators"
crate-type = ["cdylib"]
doc = false

[dependencies]
resonators = { path = "../resonators" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39", "num-complex"] }
numpy = "0.28"
