[package]
name = "resonators-py"
description = "Python bindings for the resonators crate."
publish = false
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "resonators"
crate-type = ["cdylib"]
doc = false

[dependencies]
resonators = { path = "../resonators", version = "0.1" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39", "num-complex"] }
numpy = "0.28"
