[package]
name = "resonators"
description = "Rust implementation of the Resonate algorithm for low-latency spectral analysis."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
npyz = { version = "0.9.0", features = ["npz"] }

[[bench]]
name = "bank"
harness = false

[dependencies]
num-complex = "0.4.6"
