[package]
name = "resonators"
description = "Rust implementation of the Resonate algorithm for low-latency spectral analysis."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
npyz = { version = "0.9.0", features = ["npz"] }

[[bench]]
name = "bank"
harness = false

[dependencies]
num-complex = "0.4.6"

# WASM SIMD128 only. `wide::f32x4` is used by the per-sample bank inner
# loop when compiling for wasm32 with `target-feature=+simd128` enabled.
# On every other target the scalar path is used (LLVM auto-vectorises
# it to SSE/NEON just fine, and explicit SIMD there either matches or
# slightly regresses vs auto-vectorised scalar in our benchmarks).
[target.'cfg(all(target_arch = "wasm32", target_feature = "simd128"))'.dependencies]
wide = "0.8"
